--- a/checklist_surgery.html
+++ b/checklist_surgery.html
@@ -1047,51 +1047,51 @@
 
         function selectTopTen() {
             const topTenFactors = [
-                "Clear progression of autonomy from PGY-1 to PGY-5",
                 "Program consistently exceeds ACGME minimum of 850 total major cases (1000+ cases preferred)",
-                "Cooperative, supportive resident cohort (not cutthroat competition)",
-                "Structured mentorship program with assigned faculty mentors",
-                "High first-time pass rates for ABS qualifying (written) exam (>90% ideal)",
-                "Attrition primarily for neutral reasons (family relocation, specialty change) not burnout",
-                "Overall positive gut feeling about program culture and fit",
+                "Chief residents function as primary surgeon on complex cases with attending oversight",
                 "Graduates report feeling confident performing common procedures independently",
+                "High first-time pass rates for ABS qualifying (written) exam (>90% ideal)",
                 "High first-time pass rates for ABS certifying (oral) exam (>90% ideal)",
-                "Weekly protected didactic time (grand rounds, M&M, journal club, lectures)"
+                "Cooperative, supportive resident cohort (not cutthroat competition)",
+                "High resident morale - residents appear happy and energetic",
+                "High fellowship match rate for interested residents",
+                "Accessible and approachable faculty with open-door policy",
+                "Overall positive gut feeling about program culture and fit"
             ];
             programmaticSelect(topTenFactors);
-            showToast('✅ Selected Top 10 Evidence-Based criteria');
+            showToast('✅ Selected Top 10 criteria');
         }
         
         function selectTop25() {
             const top25Factors = [
-                "Clear progression of autonomy from PGY-1 to PGY-5",
                 "Program consistently exceeds ACGME minimum of 850 total major cases (1000+ cases preferred)",
-                "Cooperative, supportive resident cohort (not cutthroat competition)",
-                "Structured mentorship program with assigned faculty mentors",
-                "High first-time pass rates for ABS qualifying (written) exam (>90% ideal)",
-                "Attrition primarily for neutral reasons (family relocation, specialty change) not burnout",
-                "Overall positive gut feeling about program culture and fit",
+                "Chief residents function as primary surgeon on complex cases with attending oversight",
                 "Graduates report feeling confident performing common procedures independently",
+                "High first-time pass rates for ABS qualifying (written) exam (>90% ideal)",
                 "High first-time pass rates for ABS certifying (oral) exam (>90% ideal)",
-                "Weekly protected didactic time (grand rounds, M&M, journal club, lectures)",
-                "High overall resident satisfaction (>80% would choose program again)",
+                "Cooperative, supportive resident cohort (not cutthroat competition)",
+                "High resident morale - residents appear happy and energetic",
+                "High fellowship match rate for interested residents",
+                "Accessible and approachable faculty with open-door policy",
+                "Overall positive gut feeling about program culture and fit",
+                "Chief residents reliably achieve >200 cases in chief year",
                 "Early operative exposure - interns actively participate in OR from Year 1",
+                "Clear progression of autonomy from PGY-1 to PGY-5",
                 "Well-organized curriculum aligned with SCORE curriculum standards",
+                "Weekly protected didactic time (grand rounds, M&M, journal club, lectures)",
+                "On-site surgical simulation center with comprehensive equipment",
+                "Structured mentorship program with assigned faculty mentors",
                 "Rotation at Level I trauma center (or robust Level II)",
                 "Strong ABSITE performance (at or above national mean)",
-                "High fellowship match rate for interested residents",
+                "Competitive placements in desirable fellowships (pediatric, oncology, vascular, etc.)",
                 "Consistent adherence to 80-hour weekly limit (averaged over 4 weeks)",
+                "High overall resident satisfaction (>80% would choose program again)",
+                "No reports of malignant culture on interviews or online forums",
                 "\"Continued Accreditation\" status without warnings or probation",
-                "On-site surgical simulation center with comprehensive equipment",
-                "Stable program director (>3 years tenure, track record of advocacy)",
-                "Dedicated research time or electives (1-3 months or research year option)",
-                "Diverse resident class (gender, race/ethnicity, background)",
-                "24/7 confidential mental health services available",
-                "Diverse surgical pathology including routine and complex cases",
-                "Alumni would choose the program again if making the decision now"
+                "Residents appear happy, energetic, and speak honestly about program"
             ];
             programmaticSelect(top25Factors);
-            showToast('✅ Selected Top 25 Evidence-Based criteria');
+            showToast('✅ Selected Top 25 criteria');
         }
 
         function selectAll() { programmaticSelect(null, true); showToast('✅ All criteria selected and rated 3'); }
@@ -1720,5 +1720,6 @@
     </script>
 </body>
 </html>
+
 
 
