--- a/checklist_im.html
+++ b/checklist_im.html
@@ -987,16 +987,53 @@
         // (Selection Button functions remain the same)
         function selectAll() { programmaticSelect(null, true); showToast('✅ All criteria selected and rated 3'); }
         function deselectAll() { programmaticSelect([], false); showToast('✅ All criteria deselected'); }
+        
+        // UPDATED Top 25 criteria
         function selectTop25() {
             const top25Factors = [
-                "Overall curriculum quality and structure", "Board certification pass rates for graduates (>80% ACGME minimum; >90% excellent)", "Conference quality (morning report, noon conference, grand rounds)", "Point-of-care ultrasound (POCUS) training", "Protected time for conferences and education", "Faculty availability and approachability", "Clinical and teaching skills of faculty", "Attending rounds frequency (2-3x weekly minimum on inpatient)", "Primary training site reputation", "EMR system consistency across sites (Epic, Cerner, etc.)", "Resident morale and happiness", "Would residents choose program again?", "Collaborative vs. competitive environment", "Resident retention rate (>98% excellent for IM)", "Actual work hours vs. stated policy (<80 hours/week)", "Call schedule type (night float, 24-hour, hybrid)", "Post-call policies (time off after overnight)", "Salary for PGY-1, PGY-2, PGY-3", "Parental leave duration (6+ weeks minimum; 12+ ideal)", "Moonlighting permitted (internal and/or external)", "Urban, suburban, or rural setting", "Cost of living and housing affordability", "Fellowship match rates and support", "Alignment with career goals (hospitalist vs. subspecialist vs. primary care)", "Overall gut feeling about fit and thriving potential"
+                "Resident morale and happiness",
+                "Urban, suburban, or rural setting",
+                "Overall curriculum quality and structure",
+                "Faculty availability and approachability",
+                "Alignment with career goals (hospitalist vs. subspecialist vs. primary care)",
+                "Actual work hours vs. stated policy (<80 hours/week)",
+                "Stress management support and wellness programs",
+                "Fellowship match rates and support",
+                "Overall gut feeling about fit and thriving potential",
+                "Active DEI committee with resident involvement",
+                "Conference quality (morning report, noon conference, grand rounds)",
+                "Primary training site reputation",
+                "Protected time for conferences and education",
+                "Cooperativeness and compatibility among residents",
+                "Clinical and teaching skills of faculty",
+                "Attending rounds frequency (2-3x weekly minimum on inpatient)",
+                "Program responsiveness to resident concerns",
+                "Board certification pass rates for graduates (>80% ACGME minimum; >90% excellent)",
+                "Research and community service opportunities",
+                "Call schedule type (night float, 24-hour, hybrid)",
+                "Continuity clinic model (weekly vs. block vs. X+Y)",
+                "Post-call policies (time off after overnight)",
+                "Parental leave duration (6+ weeks minimum; 12+ ideal)",
+                "Cost of living and housing affordability",
+                "Continuity clinic frequency (meets 10-month outpatient requirement)"
             ];
             programmaticSelect(top25Factors);
             showToast('✅ Selected Top 25 criteria');
         }
+        
+        // UPDATED Top 10 criteria
         function selectTopTen() {
             const topTenFactors = [
-                "Resident morale and happiness", "Urban, suburban, or rural setting", "Fellowship match rates and support", "Board certification pass rates for graduates (>80% ACGME minimum; >90% excellent)", "Salary for PGY-1, PGY-2, PGY-3", "Actual work hours vs. stated policy (<80 hours/week)", "Faculty availability and approachability", "Overall curriculum quality and structure", "Primary training site reputation", "Overall gut feeling about fit and thriving potential"
+                "Resident morale and happiness",
+                "Urban, suburban, or rural setting",
+                "Overall curriculum quality and structure",
+                "Faculty availability and approachability",
+                "Alignment with career goals (hospitalist vs. subspecialist vs. primary care)",
+                "Actual work hours vs. stated policy (<80 hours/week)",
+                "Stress management support and wellness programs",
+                "Fellowship match rates and support",
+                "Overall gut feeling about fit and thriving potential",
+                "Active DEI committee with resident involvement"
             ];
             programmaticSelect(topTenFactors);
             showToast('✅ Selected Top 10 criteria');
