--- a/checklist_im.html
+++ b/checklist_im.html
@@ -1000,7 +1000,7 @@
                 "Stress management support and wellness programs",
                 "Fellowship match rates and support",
                 "Overall gut feeling about fit and thriving potential",
-                "Active DEI committee with resident involvement",
+                "Holistic review in resident recruitment",
                 "Conference quality (morning report, noon conference, grand rounds)",
                 "Primary training site reputation",
                 "Protected time for conferences and education",
@@ -1009,13 +1009,13 @@
                 "Attending rounds frequency (2-3x weekly minimum on inpatient)",
                 "Program responsiveness to resident concerns",
                 "Board certification pass rates for graduates (>80% ACGME minimum; >90% excellent)",
-                "Research and community service opportunities",
+                "Research track availability with dedicated pathway",
                 "Call schedule type (night float, 24-hour, hybrid)",
                 "Continuity clinic model (weekly vs. block vs. X+Y)",
                 "Post-call policies (time off after overnight)",
                 "Parental leave duration (6+ weeks minimum; 12+ ideal)",
                 "Cost of living and housing affordability",
-                "Continuity clinic frequency (meets 10-month outpatient requirement)"
+                "Subspecialty elective availability in areas of interest"
             ];
             programmaticSelect(top25Factors);
             showToast('✅ Selected Top 25 criteria');
@@ -1033,7 +1033,7 @@
                 "Stress management support and wellness programs",
                 "Fellowship match rates and support",
                 "Overall gut feeling about fit and thriving potential",
-                "Active DEI committee with resident involvement"
+                "Holistic review in resident recruitment"
             ];
             programmaticSelect(topTenFactors);
             showToast('✅ Selected Top 10 criteria');
